kubernetes/apps/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 910681227783.dkr.ecr.eu-west-1.amazonaws.com/mbocak-k8:invoice-backend-1.0.0-prod-b58c2ff
          ports:
            - containerPort: 8080
          # volumeMounts:
          #   - name: data
          #     mountPath: /app/data
